# lenteja

./: CHANGELOG.md  Main.hs  README.md  lenteja.cabal
src/: Lenteja.hs
src/Lenteja/: Parser.hs
