cabal-version:       3.0

name:                lenteja
version:             0.1.0.0
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz.carrete@facebook.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
   hs-source-dirs:
    src
   exposed-modules:
    Lenteja
   build-depends:
    base >=4.14 && <4.15,
    lens,
    transformers,
    text,
    containers
  default-language:    Haskell2010

executable lenteja
  main-is:             Main.hs
  build-depends:       
    base >=4.14 && <4.15,
    lens,
    transformers,
    text,
    containers,
    lenteja
  default-language:    Haskell2010
